--- a/property_prices/test_data_store.ipynb
+++ b/property_prices/test_data_store.ipynb
@@ -59,44 +59,59 @@
     "    return (\n",
     "        pl.scan_csv(\n",
     "            csv_path,\n",
-    "            try_parse_dates=False,        # We'll parse manually\n",
+    "            try_parse_dates=False,  # We'll parse manually\n",
     "            quote_char='\"',\n",
     "            infer_schema_length=0,\n",
     "        )\n",
-    "        .with_columns([\n",
-    "            # 1. Parse price (remove commas if any, cast to Int64)\n",
-    "            pl.col(\"price_paid\")\n",
-    "              .str.replace_all(\",\", \"\")\n",
-    "              .cast(pl.Int64),\n",
-    "\n",
-    "            # 2. Parse deed_date → Date\n",
-    "            pl.col(\"deed_date\")\n",
-    "              .str.strptime(pl.Date, format=\"%Y-%m-%d\", strict=True),\n",
-    "\n",
-    "            # 3. Clean strings\n",
-    "            pl.col(\"postcode\").str.strip_chars(),\n",
-    "            pl.col(\"town\").str.strip_chars().str.to_uppercase(),\n",
-    "            pl.col(\"district\").str.strip_chars().str.to_uppercase(),\n",
-    "            # pl.col(\"county\").str.strip_chars().str.to_uppercase(),\n",
-    "\n",
-    "            # 4. England-only filter (exclude Wales, Scotland, NI)\n",
-    "            pl.col(\"county\")\n",
-    "              .str.contains(\"WALES|SCOTLAND|NORTHERN IRELAND\")\n",
-    "              .not_()\n",
-    "              .over(pl.lit(1)),  # dummy window to create boolean column\n",
-    "        ])\n",
+    "        .with_columns(\n",
+    "            [\n",
+    "                # 1. Parse price (remove commas if any, cast to Int64)\n",
+    "                pl.col(\"price_paid\").str.replace_all(\",\", \"\").cast(pl.Int64),\n",
+    "                # 2. Parse deed_date → Date\n",
+    "                pl.col(\"deed_date\").str.strptime(\n",
+    "                    pl.Date, format=\"%Y-%m-%d\", strict=True\n",
+    "                ),\n",
+    "                # 3. Clean strings\n",
+    "                pl.col(\"postcode\").str.strip_chars(),\n",
+    "                pl.col(\"town\").str.strip_chars().str.to_uppercase(),\n",
+    "                pl.col(\"district\").str.strip_chars().str.to_uppercase(),\n",
+    "                # pl.col(\"county\").str.strip_chars().str.to_uppercase(),\n",
+    "                # 4. England-only filter (exclude Wales, Scotland, NI)\n",
+    "                pl.col(\"county\")\n",
+    "                .str.contains(\"WALES|SCOTLAND|NORTHERN IRELAND\")\n",
+    "                .not_()\n",
+    "                .over(pl.lit(1)),  # dummy window to create boolean column\n",
+    "            ]\n",
+    "        )\n",
     "        .filter(pl.col(\"county\"))  # drop the boolean column\n",
-    "        .with_columns([\n",
-    "            # 5. Partition columns\n",
-    "            pl.col(\"deed_date\").dt.year().alias(\"year\"),\n",
-    "            pl.col(\"deed_date\").dt.month().alias(\"month\"),\n",
-    "        ])\n",
-    "        .select([\n",
-    "            \"unique_id\", \"price_paid\", \"deed_date\", \"year\", \"month\",\n",
-    "            \"postcode\", \"property_type\", \"new_build\", \"estate_type\",\n",
-    "            \"saon\", \"paon\", \"street\", \"locality\", \"town\",\n",
-    "            \"district\", \"county\", \"transaction_category\"\n",
-    "        ])\n",
+    "        .with_columns(\n",
+    "            [\n",
+    "                # 5. Partition columns\n",
+    "                pl.col(\"deed_date\").dt.year().alias(\"year\"),\n",
+    "                pl.col(\"deed_date\").dt.month().alias(\"month\"),\n",
+    "            ]\n",
+    "        )\n",
+    "        .select(\n",
+    "            [\n",
+    "                \"unique_id\",\n",
+    "                \"price_paid\",\n",
+    "                \"deed_date\",\n",
+    "                \"year\",\n",
+    "                \"month\",\n",
+    "                \"postcode\",\n",
+    "                \"property_type\",\n",
+    "                \"new_build\",\n",
+    "                \"estate_type\",\n",
+    "                \"saon\",\n",
+    "                \"paon\",\n",
+    "                \"street\",\n",
+    "                \"locality\",\n",
+    "                \"town\",\n",
+    "                \"district\",\n",
+    "                \"county\",\n",
+    "                \"transaction_category\",\n",
+    "            ]\n",
+    "        )\n",
     "    )\n",
     "\n",
     "\n",
@@ -123,10 +138,11 @@
    "source": [
     "import duckdb\n",
     "\n",
+    "\n",
     "def open_database_connection():\n",
     "    con = duckdb.connect(\"../data/house_prices.db\")\n",
     "    con.execute(\"INSTALL vortex; LOAD vortex;\")\n",
-    "    return con\n"
+    "    return con"
    ]
   },
   {
@@ -242,21 +258,21 @@
     "fig, axs = plt.subplots(1, 2, figsize=(10, 4))\n",
     "\n",
     "# Plot average price per year\n",
-    "axs[0].plot(result['year'], result['avg_price']/1000, marker='o', color='royalblue')\n",
-    "axs[0].set_title('Average Price per Year')\n",
-    "axs[0].set_xlabel('Year')\n",
-    "axs[0].set_ylabel('Average Price (£1k)')\n",
+    "axs[0].plot(result[\"year\"], result[\"avg_price\"] / 1000, marker=\"o\", color=\"royalblue\")\n",
+    "axs[0].set_title(\"Average Price per Year\")\n",
+    "axs[0].set_xlabel(\"Year\")\n",
+    "axs[0].set_ylabel(\"Average Price (£1k)\")\n",
     "axs[0].grid(True)\n",
     "\n",
     "# Plot sales count per year\n",
-    "axs[1].bar(result['year'], result['sales_count'], color='salmon')\n",
-    "axs[1].set_title('Sales Count per Year')\n",
-    "axs[1].set_xlabel('Year')\n",
-    "axs[1].set_ylabel('Sales Count')\n",
-    "axs[1].grid(axis='y')\n",
+    "axs[1].bar(result[\"year\"], result[\"sales_count\"], color=\"salmon\")\n",
+    "axs[1].set_title(\"Sales Count per Year\")\n",
+    "axs[1].set_xlabel(\"Year\")\n",
+    "axs[1].set_ylabel(\"Sales Count\")\n",
+    "axs[1].grid(axis=\"y\")\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
